--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div id="resume-content" class="resume-content-container">
                     </div>
                 <div class="text-center mt-12" data-aos="fade-up">
-                    <a href="assests/sridhar.pdf" download class="hero-btn inline-flex items-center">
+                    <a href="assests/sridhar_resume (6).pdf" download class="hero-btn inline-flex items-center">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
                         Download Full Resume (PDF)
                     </a>
@@ -201,3 +201,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
