--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-sm">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#home" class="flex items-center">
-                <img src="person.jpg" alt="Sridhar Raju" class="w-10 h-10 rounded-full mr-3 object-cover">
+                <img src="sridhar.jpg" alt="Sridhar Raju" class="w-10 h-10 rounded-full mr-3 object-cover">
                 <span class="text-2xl font-bold heading-font text-black">Sridhar Raju</span>
             </a>
             <div class="hidden md:flex space-x-8 items-center">
@@ -201,4 +201,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
